# ubqpuzzle

./: README.md
game/: Cargo.toml
game/assets/shaders/: shader.frag  shader.vert
game/src/: application.rs  main.rs
game/src/gfx/: buffer.rs  camera.rs  gmodels.rs  graphics.rs  mod.rs  model.rs  program.rs  shader.rs  types.rs  vao.rs
game/src/types/: mod.rs  transform.rs  vertex.rs
