[package]
name = "game"
version = "0.0.0" # i really, really cannot be bothered to update this
edition = "2021"
authors = ["Dmitrii Fedorin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
lazy_static = "1.4.0"
memoffset = "0.6.5"
nalgebra = "0.31.0"
nalgebra-glm = "0.17.0"
num-traits = "0.2.15"
obj-rs = "0.7.0"
sdl2 = "0.35.2"
